Fix image alignments

--- a/assets/shared/css/blocks/image.css
+++ b/assets/shared/css/blocks/image.css
@@ -1,5 +1,28 @@
-/**
- * image.css
- * All image/figure style overrides
- *
- */
+.wp-block-image {
+	margin-top: 0 !important;
+	margin-bottom: 0 !important;
+
+	& img {
+		display: block;
+	}
+
+	& .alignleft {
+		margin-right: 2rem;
+	}
+
+	& .alignright {
+		margin-left: 2rem;
+	}
+
+	& figure.alignleft,
+	& figure.alignright {
+		margin-bottom: 1.5rem;
+		margin-top: 0.7rem;
+	}
+
+	/* & .alignfull img {
+		margin-left: auto;
+		margin-right: auto;
+		width: 100vw;
+	} */
+}
