--- a/assets/shared/css/layout/content.css
+++ b/assets/shared/css/layout/content.css
@@ -33,6 +33,22 @@
 		padding-left: 0;
 		padding-right: 0;
 	}
+
+	&.alignleft {
+		float: left;
+		max-width: 300px;
+		margin-top: 0;
+		margin-left: 0;
+		margin-right: 2rem;
+	}
+
+	&.alignright {
+		float: right;
+		max-width: 300px;
+		margin-top: 0;
+		margin-right: 0;
+		margin-left: 2rem;
+	}
 }
 
 .content-area {
